--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
     "@angular/core": "^5.0.0",
+    "@angular/flex-layout": "2.0.0-beta.12",
     "@angular/forms": "^5.0.0",
     "@angular/http": "^5.0.0",
     "@angular/material": "^5.0.4",
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
-    "@angular/flex-layout": "2.0.0-beta.12",
     "core-js": "^2.4.1",
+    "ng2-file-upload": "^1.3.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
